crates/vespertide-exporter/src/tests/snapshots/vespertide_exporter__tests__render_entity_with_schema_snapshots@multiple_fk_same_table_Django.snap
---
source: crates/vespertide-exporter/src/tests/mod.rs
expression: rendered
---
from __future__ import annotations

from django.db import models


class Post(models.Model):
    id = models.UUIDField(primary_key=True)
    creator_user = models.ForeignKey("User", on_delete=models.RESTRICT, related_name="+")
    used_by_user = models.ForeignKey("User", on_delete=models.RESTRICT, related_name="+")

    class Meta:
        managed = False
        db_table = "post"
