crates/vespertide-exporter/src/tests/snapshots/vespertide_exporter__tests__render_entity_with_schema_snapshots@multiple_fk_same_table_Prisma.snap
---
source: crates/vespertide-exporter/src/tests/mod.rs
expression: rendered
---
model Post {
  id String @id
  creator_user_id String
  creator_user User @relation("PostCreatorUser", fields: [creator_user_id], references: [id], onDelete: NoAction, onUpdate: NoAction)
  used_by_user_id String
  used_by_user User @relation("PostUsedByUser", fields: [used_by_user_id], references: [id], onDelete: NoAction, onUpdate: NoAction)

  @@map("post")
}
