crates/vespertide-exporter/src/tests/snapshots/vespertide_exporter__tests__render_entity_with_schema_snapshots@multiple_fk_same_table_SeaOrm.snap
---
source: crates/vespertide-exporter/src/tests.rs
expression: rendered
---
use sea_orm::entity::prelude::*;

#[sea_orm::model]
#[derive(Clone, Debug, PartialEq, Eq, DeriveEntityModel)]
#[sea_orm(table_name = "post")]
pub struct Model {
    #[sea_orm(primary_key)]
    pub id: Uuid,
    pub creator_user_id: Uuid,
    pub used_by_user_id: Uuid,
    #[sea_orm(belongs_to, relation_enum = "CreatorUser", from = "creator_user_id", to = "id")]
    pub creator_user: HasOne<super::user::Entity>,
    #[sea_orm(belongs_to, relation_enum = "UsedByUser", from = "used_by_user_id", to = "id")]
    pub used_by_user: HasOne<super::user::Entity>,
}

vespera::schema_type!(Schema from Model, name = "PostSchema");
impl ActiveModelBehavior for ActiveModel {}
