crates/vespertide-exporter/src/tests/snapshots/vespertide_exporter__tests__render_entity_with_schema_snapshots@multiple_fk_same_table_SqlAlchemy.snap
---
source: crates/vespertide-exporter/src/tests.rs
expression: rendered
---
from __future__ import annotations

from uuid import UUID

from sqlalchemy import ForeignKey, Uuid
from sqlalchemy.orm import DeclarativeBase, Mapped, mapped_column


class Post(DeclarativeBase):
    __tablename__ = "post"

    id: Mapped[UUID] = mapped_column(Uuid, primary_key=True)
    creator_user_id: Mapped[UUID] = mapped_column(Uuid, ForeignKey("user.id"), nullable=False)
    used_by_user_id: Mapped[UUID] = mapped_column(Uuid, ForeignKey("user.id"), nullable=False)
