crates/vespertide-exporter/src/tests/snapshots/vespertide_exporter__tests__render_entity_with_schema_snapshots@multiple_fk_same_table_SqlModel.snap
---
source: crates/vespertide-exporter/src/tests.rs
expression: rendered
---
from __future__ import annotations

from uuid import UUID

from sqlmodel import Field, SQLModel


class Post(SQLModel, table=True):
    __tablename__ = "post"

    id: UUID = Field(primary_key=True)
    creator_user_id: UUID = Field(foreign_key="user.id")
    used_by_user_id: UUID = Field(foreign_key="user.id")
