crates/vespertide-exporter/src/tests/snapshots/vespertide_exporter__tests__render_entity_with_schema_snapshots@multiple_has_one_relations_Django.snap
---
source: crates/vespertide-exporter/src/tests/mod.rs
assertion_line: 393
expression: rendered
---
from __future__ import annotations

from django.db import models


class User(models.Model):
    id = models.UUIDField(primary_key=True)

    class Meta:
        db_table = "user"
